# VLM_fine_tune

./: .gitignore  README.md  pyproject.toml  trainer.ipynb
src/: model.py  utils.py
