[project]
name = "fine-tune-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "pyqt6>=6.8.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.0",
]
